--- a/Main.xaml
+++ b/Main.xaml
@@ -95,7 +95,8 @@
         </Sequence>
       </ui:CommentOut.Body>
     </ui:CommentOut>
-    <sads:DebugSymbol.Symbol>dzxDOlxVc2Vyc1x4cG1zXERvY3VtZW50c1xVaVBhdGhcSmVua2luc19UZXN0UHJvY2Vzc1xNYWluLnhhbWwLSwNjDgIBAVAFUKcBAgELUQVRqgECAQlSBVKiAQIBB1MFU7IBAgEDVAVhFQIBAlByUKQBAgEMUXJRpwECAQpSclKfAQIBCFOLAVOXAQIBBlOmAVOvAQIBBA==</sads:DebugSymbol.Symbol>
+    <ui:LogMessage DisplayName="Log Message" Level="Info" Message="[&quot;Fourth Commit&quot;]" sap2010:WorkflowViewState.IdRef="LogMessage_5" />
+    <sads:DebugSymbol.Symbol>dzxDOlxVc2Vyc1x4cG1zXERvY3VtZW50c1xVaVBhdGhcSmVua2luc19UZXN0UHJvY2Vzc1xNYWluLnhhbWwNSwNkDgIBAVAFUKcBAgENUQVRqgECAQtSBVKiAQIBCVMFU7IBAgEFVAVhFQIBBGIFYpIBAgECUHJQpAECAQ5RclGnAQIBDFJyUp8BAgEKU4sBU5cBAgEIU6YBU68BAgEGYkNiYAIBAw==</sads:DebugSymbol.Symbol>
   </Sequence>
   <sap2010:WorkflowViewState.ViewStateManager>
     <sap2010:ViewStateManager>
@@ -119,14 +120,15 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </sap2010:ViewStateData>
-      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="336,667">
+      <sap2010:ViewStateData Id="LogMessage_5" sap:VirtualizedContainerService.HintSize="314,91" />
+      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="336,798">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </sap2010:ViewStateData>
-      <sap2010:ViewStateData Id="Main_1" sap:VirtualizedContainerService.HintSize="376,747" />
+      <sap2010:ViewStateData Id="Main_1" sap:VirtualizedContainerService.HintSize="376,878" />
     </sap2010:ViewStateManager>
   </sap2010:WorkflowViewState.ViewStateManager>
 </Activity>
