--- a/Main.xaml
+++ b/Main.xaml
@@ -95,8 +95,9 @@
         </Sequence>
       </ui:CommentOut.Body>
     </ui:CommentOut>
-    <ui:LogMessage DisplayName="Log Message" Level="Info" Message="[&quot;Fourth Commit&quot;]" sap2010:WorkflowViewState.IdRef="LogMessage_5" />
-    <sads:DebugSymbol.Symbol>dzxDOlxVc2Vyc1x4cG1zXERvY3VtZW50c1xVaVBhdGhcSmVua2luc19UZXN0UHJvY2Vzc1xNYWluLnhhbWwNSwNkDgIBAVAFUKcBAgENUQVRqgECAQtSBVKiAQIBCVMFU7IBAgEFVAVhFQIBBGIFYpIBAgECUHJQpAECAQ5RclGnAQIBDFJyUp8BAgEKU4sBU5cBAgEIU6YBU68BAgEGYkNiYAIBAw==</sads:DebugSymbol.Symbol>
+    <ui:LogMessage DisplayName="Log Message" sap2010:WorkflowViewState.IdRef="LogMessage_5" Level="Info" Message="[&quot;Fourth Commit&quot;]" />
+    <ui:LogMessage DisplayName="Log Message" Level="Info" Message="[&quot;Fifth Commit&quot;]" sap2010:WorkflowViewState.IdRef="LogMessage_6" />
+    <sads:DebugSymbol.Symbol>dzxDOlxVc2Vyc1x4cG1zXERvY3VtZW50c1xVaVBhdGhcSmVua2luc19UZXN0UHJvY2Vzc1xNYWluLnhhbWwPSwNlDgIBAVAFUKcBAgEPUQVRqgECAQ1SBVKiAQIBC1MFU7IBAgEHVAVhFQIBBmIFYpIBAgEEYwVjkQECAQJQclCkAQIBEFFyUacBAgEOUnJSnwECAQxTiwFTlwECAQpTpgFTrwECAQhicmKPAQIBBWNDY18CAQM=</sads:DebugSymbol.Symbol>
   </Sequence>
   <sap2010:WorkflowViewState.ViewStateManager>
     <sap2010:ViewStateManager>
@@ -121,14 +122,15 @@
         </sap:WorkflowViewStateService.ViewState>
       </sap2010:ViewStateData>
       <sap2010:ViewStateData Id="LogMessage_5" sap:VirtualizedContainerService.HintSize="314,91" />
-      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="336,798">
+      <sap2010:ViewStateData Id="LogMessage_6" sap:VirtualizedContainerService.HintSize="314,91" />
+      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="336,929">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </sap2010:ViewStateData>
-      <sap2010:ViewStateData Id="Main_1" sap:VirtualizedContainerService.HintSize="376,878" />
+      <sap2010:ViewStateData Id="Main_1" sap:VirtualizedContainerService.HintSize="376,1009" />
     </sap2010:ViewStateManager>
   </sap2010:WorkflowViewState.ViewStateManager>
 </Activity>
